tasks are finished: most rated shows, pagination, sortable columns (css missing)

--- a/static/style/pagination.css
+++ b/static/style/pagination.css
@@ -1,5 +1,7 @@
 /* Pagination links */
 .pagination{
+    display: flex;
+    flex-wrap: wrap;
    width: 100%;
    margin-top: 5px;
    text-align: center;
