--- a/templates/index_skeleton.html
+++ b/templates/index_skeleton.html
@@ -13,6 +13,9 @@
             </div>
         </header>
         {% block section %}{% endblock %}
+        <div class="table">
+            {% block episodes %}{% endblock %}
+        </div>
     <footer>
         Copyright, bla-bla
     </footer>
