--- a/templates/episodes.html
+++ b/templates/episodes.html
@@ -1,4 +1,6 @@
-{% extends 'layout.html' %}
+{% extends 'index_skeleton.html' %}
+{% block script %}
+    <script src="{{ url_for("static", filename="./js/episodes.js") }}" defer></script>
+{% endblock %}
 {% block episodes %}
-    <div class="episodes"></div>
 {% endblock %}
