--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>{% block title %}Title{% endblock %}</title>
-
+    {% block script %}{% endblock %}
     <!-- Import Montserrat font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -30,7 +30,6 @@
 </head>
 <body>
 {% block body_wrapper %}
-{% block episodes %}{% endblock %}
 {% endblock %}
 {% block background %}{% endblock %}
 </body>
