--- a/templates/index_skeleton.html
+++ b/templates/index_skeleton.html
@@ -13,8 +13,10 @@
             </div>
         </header>
         {% block section %}{% endblock %}
-        <div class="table">
-            {% block episodes %}{% endblock %}
+        <div class="card">
+            <div class="table">
+                {% block episodes %}{% endblock %}
+            </div>
         </div>
     <footer>
         Copyright, bla-bla
