--- a/templates/episodes.html
+++ b/templates/episodes.html
@@ -1,6 +1,7 @@
 {% extends 'index_skeleton.html' %}
 {% block script %}
-    <script src="{{ url_for("static", filename="./js/episodes.js") }}" defer></script>
+    <script src="{{ url_for("static", filename="./js/episodes.js") }}" defer type="module"></script>
+    <script src="https://kit.fontawesome.com/f85f6931c2.js" crossorigin="anonymous"></script>
 {% endblock %}
 {% block episodes %}
 {% endblock %}
