--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    <title>CsED</title>
+    {% block script %}{% endblock %}
+    <title>{% block title %}CsED{% endblock %}</title>
 
     <!-- Import Montserrat font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style/form.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/grid.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/utils.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/medal.css') }}">
 
     <!-- page specific styling -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style/detailed-view.css') }}">
@@ -40,6 +41,7 @@
             <button type="button" id="bt-login">Login</button>
         </div>
     </header>
+    {% block section %}
     <section>
         <h1 class="title text-center">Welcome page</h1>
         <div class="card">
@@ -62,6 +64,7 @@
             </ul>
         </div>
     </section>
+    {% endblock %}
     <footer>
         Copyright, bla-bla
     </footer>
