--- a/templates/shows.html
+++ b/templates/shows.html
@@ -8,13 +8,11 @@
         <table title>
             <thead>
             <th>Title</th>
-            <th>Overall runtime</th>
             </thead>
             <tbody>
             {% for title in get_top10_shows %}
                 <tr>
-                    <td title="{{ get_top10_shows.index(title) }}">{{ title.title }}</td>
-                    <td>{{ title.runtime }}</td>
+                    <td title>{{ title.title }}</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -26,7 +24,7 @@
             <tbody>
                 {% for actors in get_actors %}
                     <tr>
-                        <td actors="{{ get_actors.index(actors) }}">{{ actors.actors }}</td>
+                        <td actors>{{ actors.actors }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
