minor refactor in counter function

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,7 @@
                 in-depth
                 navigation.
             </p>
+        <p><a href="/shows">SHOWS</a></p>
         </div>
         <div class="card">
             <ul>
