--- a/templates/genre_filter.html
+++ b/templates/genre_filter.html
@@ -1,6 +1,7 @@
 {% extends 'index.html' %}
 {% block script %}
     <script src="{{ url_for('static', filename='js/genre_filter.js') }}" type="module"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/genres.css') }}">
 {% endblock %}
 {% block content %}
     <div class="card">
