--- a/templates/show-info.html
+++ b/templates/show-info.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% block script %}
-    <script src="{{ url_for('static', filename='js/shows-info.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='js/shows-info.js') }}" type="module"></script>
 {% endblock %}
 
 {% block content %}
